# Notavi

./: .gitignore  .gitmodules  CMakeLists.txt
include/notavi/: buffer.hpp  compiler.hpp  editor.hpp  enum.hpp  notavi.hpp  os.hpp  serde.hpp  util.hpp  version.hpp.in
lib/: CMakeLists.txt  buffer.cpp  serde.cpp
resources/: default_config.toml
src/: CMakeLists.txt
